--- a/app/pug/layout/section-apartments.pug
+++ b/app/pug/layout/section-apartments.pug
@@ -52,7 +52,7 @@ svg.apartments-slider__nextbtn
             a(href="#").apartments-tile__link.link Смотреть квартиры объекта
         //SLIDER TILE
         .apartments-tile
-            .apartments-tile__name ЖК "На сенной"
+            .apartments-tile__name ЖК «Дом на Мирного»
             .apartments-tile__img
                 //TILE IMG
                 img(src="images/apartaments/apartaments1.jpg")
