--- a/app/scss/modules/_section-apartments.scss
+++ b/app/scss/modules/_section-apartments.scss
@@ -42,9 +42,6 @@
         @media (min-width: 1024px) {
             grid-column: 1/6;
         }
-        @media (min-width: 1024px) {
-            grid-column: 1/5;
-        }
     }
     .arrow-btn {
         @include pos($b: 50px, $l: 0);
@@ -66,7 +63,7 @@
         &__nextbtn {
             @include pos($r: 8px, $t: 50%);
             z-index: 3;
-            fill: #FFF3A6;
+            //fill: #FFF3A6;
             transform: rotate(180deg);
             @media (min-width: 1024px) {
                 @include pos($r: 33px, $t: 50%);
@@ -75,7 +72,7 @@
         &__prevbtn {
             @include pos($l: 8px, $t: 50%);
             z-index: 3;
-            fill: #FFF3A6;
+            //fill: #FFF3A6;
             @media (min-width: 1024px) {
                 @include pos($l: 39%, $t: 50%);
             }
@@ -94,15 +91,14 @@
                 @include pos($t: 210px, $r: 50%);
                 transform: translateX(50%);
                 width: 80%;
-                //left: 50%;
-                // transform: translateX(-50%);
+            }
+            @media (max-width: 823px) and (orientation: landscape) {
+                width: 60%;
             }
             @media (min-width: 768px) {
                 @include pos($t: 210px, $r: 50%);
                 transform: translateX(50%);
                 width: 50%;
-                //left: 50%;
-                //transform: translateX(-50%);
                 &:after {
                     display: none;
                 }
@@ -121,33 +117,38 @@
                     z-index: 2;
                 }
             }
+            @media (width: 1024px) and (height: 768px) {
+                right: -90px;
+                width: 50vw;
+            }
         }
     }
     &-tile {
         margin: 0 .25rem;
         background: #423c3a;
-        //background: linear-gradient(270deg, rgba(66, 60, 58, 0.33) -20.49%, #423C3A -20.49%, rgba(255, 255, 255, 0) 18.52%), linear-gradient(90deg, rgba(66, 60, 58, 0.33) -12.06%, rgba(255, 255, 255, 0) 25.73%), $page-darken-bg;
         text-align: center;
         color: $tw;
         display: grid !important;
         min-width: 196px;
-        //justify-content: center;
         overflow: hidden;
         @media (min-width: 1024px) {
-            min-height: 888px;
+            grid-template-rows: 130px 370px 185px 110px 108px;
+        }
+        @media (max-width: 923px) {
+            grid-template-rows: 64px 370px 117px 93px 80px;
         }
         &__name {
             padding: 15px 0 5px;
             height: auto;
-            padding: 25px 0 0;
+            padding: 25px 0 15px;
             grid-row: 1/2;
             grid-column: 1/13;
-            width: inherit;
+            width: 100%;
             @media (min-width: 1024px) {
                 padding: 25px 0;
                 font-size: 36px;
                 line-height: 44px;
-                height: 100px;
+                height: 130px;
                 align-self: center;
             }
         }
@@ -158,33 +159,15 @@
             position: relative;
             grid-row: 2/3;
             grid-column: 1/13;
-            &:before {
-                content: '';
-                @include pos($b: -1px, $l: 0);
-                @include size(100%, 16px);
-                background: #423C3A;
+            @media (max-width: 823px) and (orientation: landscape) {
+                height: 180px;
             }
-            // @media (max-width: 812px) and (orientation: landscape) {
-            //     grid-row: 2/5;
-            //     grid-column: 1/7;
-            //     justify-self: center;
-            //     align-self: center;
-            //     height: 260px;
-            //     margin: 15px;
-            // }
             img {
-                width: auto;
-                min-width: 100%;
-                height: 100%;
-                @media (max-width: 576px) {
-                    min-height: calc(100% - 30px);
-                    width: calc(100% - 30px);
-                    margin: 15px 0;
-                }
-                @media (max-width: 812px) and (orientation: landscape) {
-                    min-height: calc(80% - 30px);
-                    //width: calc(80% - 30px);
-                    margin: 15px 0;
+                width: 100%;
+                height: auto;
+                @media (min-width: 1024px) {
+                    width: auto;
+                    height: 100%;
                 }
             }
         }
@@ -192,8 +175,11 @@
             grid-row: 3/4;
             grid-column: 1/13;
             margin: 50px 0;
-            width: inherit;
+            width: 100%;
             @media (max-width: 576px) {
+                margin: 15px 0;
+            }
+            @media (max-width: 823px) and (orientation: landscape) {
                 margin: 15px 0;
             }
             svg {
@@ -211,15 +197,21 @@
             padding: 0 .25rem;
             grid-row: 4/5;
             grid-column: 1/13;
-            width: inherit;
+            width: 100%;
             @media (max-width: 576px) {
                 font-size: 24px;
                 line-height: 29px;
                 width: 75%;
                 justify-self: center;
             }
+            @media (max-width: 823px) and (orientation: landscape) {
+                margin-bottom: 5px;
+            }
         }
         &__link {
+            @media (max-width: 823px) and (orientation: landscape) {
+                margin-bottom: 20px;
+            }
             @media (max-width: 576px) {
                 font-size: 16px;
                 line-height: 20px;
@@ -236,7 +228,7 @@
             text-align: center;
             padding: 0 1.25rem;
             display: block;
-            width: inherit;
+            width: 100%;
         }
         @media (max-width: 1500px) {
             &__name {
