--- a/app/scss/layout/_WP.scss
+++ b/app/scss/layout/_WP.scss
@@ -51,6 +51,12 @@ p {
     margin: 10px 10px 10px 0;
     width: 40%;
     height: auto;
+    @media (max-width: 900px) {
+        float: unset;
+        width: 100%;
+        margin-right: 0;
+        margin: 10px 0;
+    }
 }
 
 .aligncenter {
@@ -58,6 +64,11 @@ p {
     margin: 0 auto;
     width: 40%;
     height: auto;
+    @media (max-width: 900px) {
+        float: unset;
+        width: 100%;
+        margin: 10px 0;
+    }
 }
 
 .alignright {
@@ -65,6 +76,12 @@ p {
     margin: 10px 0 10px 10px;
     width: 40%;
     height: auto;
+    @media (max-width: 900px) {
+        float: unset;
+        width: 100%;
+        margin-left: 0;
+        margin: 10px 0;
+    }
 }
 
 .alignnone {
