--- a/app/scss/layout/_general.scss
+++ b/app/scss/layout/_general.scss
@@ -13,7 +13,6 @@ html {
 
 body,
 html {
-    min-height: 100%;
     width: 100%;
 }
 
@@ -104,10 +103,11 @@ button::-moz-focus-inner {
     @include pos($t: 0, $l: 0);
     position: fixed;
     @include size(100vw, 100vh);
+    //@include size(100%);
     background: #f5f5f4;
     z-index: 100;
     .wrap {
-        @include pos($t: 50%, $l: 50%);
+        @include pos($t: 50vh, $l: 50vw);
         position: fixed;
         transform: translateX(-50%) translateY(-50%);
         @include size(150px);
