--- a/app/scss/modules/_footer.scss
+++ b/app/scss/modules/_footer.scss
@@ -18,6 +18,19 @@
             text-decoration: underline;
         }
     }
+    .grid {
+        @media (min-width: 1024px) and (height: 768px) {
+            grid-template-rows: 150px 140px auto;
+            grid-row-gap: 30px;
+        }
+    }
+    .container {
+        @media (min-width: 1024px) and (height: 768px) {
+            padding-left: 10px;
+            padding-right: 10px;
+            padding-top: 50px;
+        }
+    }
     &-address {
         grid-column: 1 / 5;
         grid-row: 1 / 2;
@@ -45,6 +58,15 @@
             line-height: 20px;
             margin: 0 0 10px 0;
             padding: 0;
+            &__title {
+                font-size: 19px;
+                line-height: 23px;
+                margin: 0 0 10px 0;
+            }
+        }
+        @media (min-width: 1024px) and (height: 768px) {
+            font-size: 15px;
+            line-height: 20px;
             &__title {
                 font-size: 19px;
                 line-height: 23px;
@@ -107,6 +129,10 @@
             line-height: 20px;
             padding: 0;
         }
+        @media (min-width: 1024px) and (height: 768px) {
+            font-size: 15px;
+            line-height: 20px;
+        }
         @media (max-width: 812px) and (orientation: landscape) {
             grid-column: 1 / 13;
             grid-row: 2 / 3;
@@ -148,8 +174,8 @@
             padding: 0;
             position: absolute;
             top: 45px;
-            width: 100%;
-            text-align: center;
+            left: 50%;
+            transform: translateX(-50%);
         }
         @media (max-width: 768px) {
             display: none;
@@ -203,6 +229,11 @@
             }
             @media (max-width: 768px) {
                 font-size: 16px;
+            }
+            @media (min-width: 1024px) and (height: 768px) {
+                width: 172px;
+                font-size: 1rem;
+                margin: 0;
             }
         }
         @media (max-width: 768px) {
@@ -267,6 +298,11 @@
             &__icons {
                 padding: 0 20px 10px;
                 margin-bottom: 40px;
+            }
+        }
+        @media (max-width: 640px) and (orientation: landscape) {
+            &__icons {
+                padding: 0 0 10px;
             }
         }
         @media (max-width: 812px) and (orientation: landscape) {
@@ -338,14 +374,21 @@
             @media (max-width: 768px) {
                 bottom: -45px;
             }
+            @media (orientation: landscape) {
+                bottom: -25px;
+            }
+            @media (max-width: 640px) and (orientation: landscape) {
+                bottom: -45px;
+            }
+            @media (min-width: 1024px) and (height: 768px) {
+                bottom: -50px;
+            }
         }
         &__form {
             display: flex;
             flex-direction: column;
             justify-content: space-between;
             height: 100%;
-            display: flex;
-            flex-direction: column;
         }
         form {
             display: flex;
@@ -357,6 +400,10 @@
                 flex-direction: row;
                 justify-content: space-between;
                 align-items: flex-end;
+            }
+            @media (min-width: 1024px) and (height: 768px) {
+                justify-content: unset;
+                align-items: unset;
             }
         }
         &__headline {
@@ -375,6 +422,9 @@
             @media (max-width: 812px) and (orientation: landscape) {
                 margin: 0 0 30px 0;
                 text-align: center;
+            }
+            @media (min-width: 1024px) and (height: 768px) {
+                font-size: 1rem;
             }
         }
         &__title {
@@ -421,6 +471,11 @@
             //align-self: flex-end;
             @media (max-width: 769px) {
                 margin: 10px auto 0;
+            }
+            @media (min-width: 1024px) and (height: 768px) {
+                width: 172px;
+                font-size: 1rem;
+                margin: 0;
             }
         }
         .wpcf7-submit {
