--- a/app/scss/modules/_header.scss
+++ b/app/scss/modules/_header.scss
@@ -24,6 +24,12 @@
         @media (max-width: 576px) {
             padding: 90px 20px;
         }
+        @media (min-width: 360px) and (orientation: portrait) {
+            padding: 10px 20px;
+        }
+        @media (max-width: 360px) and (orientation: landscape) {
+            padding: 20px 40px;
+        }
         .mobile-logo {
             display: none;
             @media (max-width: 1024px) {
@@ -36,6 +42,9 @@
                 @media (max-width: 812px) {
                     @include size(100px);
                 }
+            }
+            @media (max-width: 823px) and (orientation: landscape) {
+                display: none;
             }
         }
         &__title {
@@ -66,6 +75,16 @@
                 line-height: 54px;
                 width: 100%;
             }
+            @media (min-width: 360px) and (orientation: portrait) {
+                font-size: 30px;
+                line-height: 40px;
+                width: 100%;
+            }
+            @media (max-width: 360px) and (orientation: landscape) {
+                font-size: 30px;
+                line-height: 40px;
+                width: 100%;
+            }
         }
         &__text {
             font-size: 29px;
@@ -94,10 +113,16 @@
             @media (max-width: 812px) and (orientation: landscape) {
                 font-size: 16px;
             }
+            @media (min-width: 360px) and (orientation: portrait) {
+                margin-bottom: 50px;
+            }
         }
         .arrow-btn {
             margin-top: 21px;
             align-self: center;
+            @media (max-width: 360px) and (orientation: landscape) {
+                margin-top: 0;
+            }
         }
     }
 }
