--- a/app/scss/modules/_modal.scss
+++ b/app/scss/modules/_modal.scss
@@ -4,6 +4,7 @@
     // }
     &-is-shown {
         display: block;
+        overflow: scroll;
     }
     display: none;
     position: fixed;
@@ -11,7 +12,7 @@
     left: 0;
     top: 0;
     width: 100%;
-    height: 100%;
+    min-height: 100%;
     //overflow: auto;
     background: rgba(66, 60, 58, 0.7);
     &__content {
@@ -29,6 +30,10 @@
             padding: 60px 100px;
             height: unset;
         }
+        @media (min-width: 1024px) and (height: 768px) {
+            padding: 50px 50px;
+        }
+        .container {}
     }
     &__form {
         //width: 100%;
@@ -54,7 +59,7 @@
         //overflow: hidden;
         label {
             grid-column: span 12;
-            @media (min-width: 1025px) {
+            @media (min-width: 1023px) {
                 grid-column: span 4;
             }
         }
@@ -116,9 +121,15 @@
             //line-height: 29px;
             margin-bottom: 0;
         }
+        @media (min-width: 1024px) and (height: 768px) {
+            margin: 0 5px;
+        }
     }
     .contact-form__field {
         padding: 0;
+        @media (min-width: 1024px) and (height: 768px) {
+            font-size: 1rem;
+        }
     }
     .modal__field--red {
         border-color: #EB5757 !important;
