--- a/app/scss/modules/_page-object-opened.scss
+++ b/app/scss/modules/_page-object-opened.scss
@@ -19,6 +19,10 @@
                 letter-spacing: 0.05em;
                 text-transform: uppercase;
             }
+            // @media (min-width: 1024px) and (height: 768px) {
+            //     font-size: 16px;
+            //     line-height: 20px;
+            // }
         }
         .content {
             background: #514947;
@@ -32,7 +36,7 @@
         .content-logo {
             grid-column: 1/13;
             grid-row: 1/2;
-            @media (min-width: 1025px) {
+            @media (min-width: 1023px) {
                 grid-column: 1/7;
                 grid-row: 1/2;
             }
@@ -40,7 +44,7 @@
         .content-picture {
             grid-column: 1/13;
             grid-row: 2/3;
-            @media (min-width: 1025px) {
+            @media (min-width: 1023px) {
                 grid-column: 7/13;
                 grid-row: 1/2;
             }
@@ -48,7 +52,7 @@
         .content-icons {
             grid-column: 2/12;
             grid-row: 3/4;
-            @media (min-width: 1025px) {
+            @media (min-width: 1023px) {
                 grid-column: 1/13;
                 grid-row: 2/3;
             }
@@ -56,7 +60,7 @@
         .content-info {
             grid-column: 2/12;
             grid-row: 4/5;
-            @media (min-width: 1025px) {
+            @media (min-width: 1023px) {
                 grid-column: 1/13;
                 grid-row: 3/4;
             }
@@ -64,7 +68,7 @@
         .content-galery {
             grid-column: 1/13;
             grid-row: 5/6;
-            @media (min-width: 1025px) {
+            @media (min-width: 1023px) {
                 grid-column: 1/13;
                 grid-row: 4/5;
             }
@@ -79,7 +83,7 @@
                 margin: 0 0 15px 30px;
                 position: relative;
                 list-style-type: none;
-                @media (min-width: 1025px) {
+                @media (min-width: 1023px) {
                     margin: 0 30px 1rem 70px;
                     //line-height: 32px;
                 }
@@ -91,7 +95,7 @@
                     content: counter(list) "";
                     color: #FFF3A6;
                     z-index: 2;
-                    @media (min-width: 1025px) {
+                    @media (min-width: 1023px) {
                         //top: 8.5px;
                         left: -44px;
                     }
@@ -104,7 +108,7 @@
                     border-radius: 50%;
                     transform: translateY(-50%);
                     // z-index: 1;
-                    @media (min-width: 1025px) {
+                    @media (min-width: 1023px) {
                         @include size(40px);
                         left: -60px;
                     }
@@ -121,7 +125,7 @@
                 margin: 0 0 15px 30px;
                 position: relative;
                 list-style-type: none;
-                @media (min-width: 1025px) {
+                @media (min-width: 1023px) {
                     margin: 0 30px 1rem 70px;
                 }
                 &::after {
@@ -132,7 +136,7 @@
                     border-radius: 50%;
                     transform: translateY(-50%);
                     //z-index: 1;
-                    @media (min-width: 1025px) {
+                    @media (min-width: 1023px) {
                         @include size(40px);
                         left: -60px;
                     }
@@ -143,15 +147,12 @@
 }
 
 .object-header {
-    .title {
-        margin-top: 150px;
-    }
     .arrow-btn--left {
         color: #423C3A;
         margin: 20px 0 50px;
         .arrow-btn__icon {
             @include size(40px);
-            @media (min-width: 1025px) {
+            @media (min-width: 1023px) {
                 @include size(65px);
             }
         }
@@ -159,7 +160,7 @@
             left: 16px;
             height: 20px;
             transform: rotate(-360deg) translateY(-50%);
-            @media (min-width: 1025px) {
+            @media (min-width: 1023px) {
                 top: 50%;
                 left: 25px;
             }
@@ -173,7 +174,7 @@
         font-size: 24px;
         line-height: 29px;
         margin: 0 0 30px;
-        @media (min-width: 1025px) {
+        @media (min-width: 1023px) {
             margin: 50px 0 30px;
         }
     }
@@ -184,7 +185,7 @@
     padding: 40px 0 50px;
     text-align: center;
     background: #423C3A;
-    @media (min-width: 1025px) {
+    @media (min-width: 1023px) {
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -195,7 +196,7 @@
     .logo {
         fill: #FFFFFF;
         margin: 5px 0 0;
-        @media (min-width: 1025px) {
+        @media (min-width: 1023px) {
             width: auto;
             height: 200px;
         }
@@ -206,7 +207,7 @@
             font-family: Bellota Text;
             font-style: normal;
             font-weight: normal;
-            @media (min-width: 1025px) {
+            @media (min-width: 1023px) {
                 font-size: 28px;
                 line-height: 35px;
             }
@@ -218,7 +219,7 @@
             font-style: normal;
             font-weight: normal;
             text-align: center;
-            @media (min-width: 1025px) {
+            @media (min-width: 1023px) {
                 font-size: 64px;
                 line-height: 78px;
             }
@@ -235,7 +236,7 @@
             text-align: center;
             letter-spacing: 0.05em;
             text-transform: uppercase;
-            @media (min-width: 1025px) {
+            @media (min-width: 1023px) {
                 font-size: 24px;
                 line-height: 29px;
                 margin: 0;
@@ -250,14 +251,14 @@
     //     height: 495px;
     // }
     height: 100%;
-    @media (min-width: 1025px) {
+    @media (min-width: 1023px) {
         position: relative;
         overflow: hidden;
         //height: 600px;
     }
     .item__img {
         transition: all 1s cubic-bezier(.04, .5, .68, 1.04);
-        @media (min-width: 1025px) {
+        @media (min-width: 1023px) {
             position: unset;
             overflow: unset;
             height: 100%;
@@ -266,11 +267,14 @@
 }
 
 .content-icons {
-    @media (min-width: 1025px) {
+    @media (min-width: 1023px) {
         padding: 0 70px;
         display: grid;
         grid-template-columns: repeat(4, 1fr);
         grid-gap: 40px;
+        @media (min-width: 1024px) and (height: 768px) {
+            grid-gap: 20px;
+        }
         .content-headline {
             grid-column: 1/5;
             grid-row: 1/2;
@@ -278,7 +282,7 @@
     }
     .item__icon {
         fill: transparent;
-        @media (min-width: 1025px) {
+        @media (min-width: 1023px) {
             display: flex !important;
         }
         &:nth-child(n + 7) {
@@ -291,10 +295,21 @@
                 fill: #514947;
             }
         }
+        @media (min-width: 1024px) and (height: 768px) {
+            svg {
+                min-width: 50px;
+                width: 50px;
+                margin: 0 15px 0 0;
+            }
+        }
     }
     .icon-text {
         width: 78%;
         margin: 0;
+        @media (min-width: 1024px) and (height: 768px) {
+            width: unset;
+            font-size: 11px;
+        }
     }
 }
 
@@ -302,7 +317,7 @@
     font-size: 16px;
     line-height: 26px;
     font-weight: 300;
-    @media (min-width: 1025px) {
+    @media (min-width: 1023px) {
         padding: 0 70px;
     }
     &__text {
@@ -311,7 +326,7 @@
     }
     .arrow-btn--left {
         margin: 30px 0 50px 0;
-        justify-content: flex-end;
+        justify-content: center;
         font-family: Century Gothic;
         font-style: normal;
         font-weight: normal;
@@ -324,7 +339,8 @@
             transform: translateY(-50%) translateX(-50%) rotate(-180deg);
             height: 20px;
         }
-        @media (min-width: 1025px) {
+        @media (min-width: 1023px) {
+            justify-content: flex-end;
             font-size: 17px;
             margin: 70px 0 50px calc(100% - 400px);
         }
@@ -336,14 +352,14 @@
     color: #514947;
     position: relative;
     height: 390px;
-    @media (min-width: 1025px) {
+    @media (min-width: 1023px) {
         height: 750px;
         padding-top: 0;
         padding-bottom: 75px;
     }
     .slider-icon {
         display: none !important;
-        @media (min-width: 1025px) {
+        @media (min-width: 1023px) {
             display: block !important;
             @include pos($t: 50%);
             height: 75px;
@@ -367,7 +383,7 @@
     .content-headline {
         grid-column: 2/12;
         grid-row: 1/2;
-        @media (min-width: 1025px) {
+        @media (min-width: 1023px) {
             grid-column: 1/13;
             grid-row: 1/2;
             font-size: 36px;
@@ -382,7 +398,7 @@
     }
     .container {
         @include pos($t: 0, $l: 0);
-        @media (min-width: 1025px) {
+        @media (min-width: 1023px) {
             margin: 0 0 80px 180px;
             width: calc(100% - 180px);
         }
@@ -413,7 +429,7 @@
             height: 100%;
             width: auto;
         }
-        @media (min-width: 1025px) {
+        @media (min-width: 1023px) {
             height: 450px;
         }
     }
@@ -445,7 +461,7 @@
         margin: 20px;
         width: 40px !important;
         height: 40px !important;
-        @media (min-width: 1025px) {
+        @media (min-width: 1023px) {
             width: 75px !important;
             height: 75px !important;
         }
@@ -465,7 +481,7 @@
         }
         &:before,
         &:after {
-            @media (min-width: 1025px) {
+            @media (min-width: 1023px) {
                 @include pos($t: 14px, $r: 36px);
                 @include size(2px, 45px)
             }
@@ -480,7 +496,7 @@
         width: 40px !important;
         height: 40px !important;
         background: #FFF3A6 !important;
-        @media (min-width: 1025px) {
+        @media (min-width: 1023px) {
             width: 75px !important;
             height: 75px !important;
         }
@@ -494,7 +510,7 @@
             position: absolute;
             top: calc(38% - 1px);
             right: calc(55% - 1px);
-            @media (min-width: 1025px) {
+            @media (min-width: 1023px) {
                 width: 22.5px;
                 top: 38%;
                 right: 55%;
@@ -510,7 +526,7 @@
             position: absolute;
             top: 58%;
             right: calc(55% - 1px);
-            @media (min-width: 1025px) {
+            @media (min-width: 1023px) {
                 width: 22.5px;
                 top: 58%;
                 right: 55%;
@@ -521,7 +537,7 @@
         width: 40px !important;
         height: 40px !important;
         background: #FFF3A6 !important;
-        @media (min-width: 1025px) {
+        @media (min-width: 1023px) {
             width: 75px !important;
             height: 75px !important;
         }
@@ -535,12 +551,12 @@
             position: absolute;
             top: calc(38% - 1px);
             left: calc(55% - 1px);
-            @media (min-width: 1025px) {
+            @media (min-width: 1023px) {
                 width: 22.5px;
                 top: 38%;
                 left: 55%;
             }
-            // @media (min-width: 1025px) {
+            // @media (min-width: 1023px) {
             //     @include pos($b: 50%, $l: 50%);
             //     transform: translateX(-50%) translateY(50%);
             //     @include size(125%, auto);
@@ -556,12 +572,12 @@
             position: absolute;
             top: 58%;
             left: calc(55% - 1px);
-            @media (min-width: 1025px) {
+            @media (min-width: 1023px) {
                 width: 22.5px;
                 top: 58%;
                 left: 55%;
             }
-            // @media (min-width: 1025px) {
+            // @media (min-width: 1023px) {
             //     @include pos($b: 50%, $l: 50%);
             //     transform: translateX(-50%) translateY(50%);
             //     @include size(125%, auto);
