--- a/app/scss/modules/_page-object.scss
+++ b/app/scss/modules/_page-object.scss
@@ -1,6 +1,5 @@
 .object-body {
     .footer {
-        //background: rgba(229, 229, 229, .5);
         background: #f5f5f4;
         padding: 10px 0 50px;
     }
@@ -24,7 +23,8 @@
     .title {
         font-size: 36px;
         margin: 120px 0 20px;
-        @media (min-width: 1200px) {
+        @media (min-width: 1023px) {
+            margin-top: 0;
             font-size: 64px;
             line-height: 78px;
             margin: 60px 0 20px;
@@ -39,18 +39,21 @@
     }
     .container {
         margin-bottom: 0;
+        @media (min-width: 1023px) {
+            padding: 0 10px;
+        }
     }
 }
 
 .object-content {
     background: #f5f5f4;
-    @media (min-width: 1025px) {
+    @media (min-width: 1023px) {
         padding: 0;
     }
     .container {
         padding: 0;
         margin-bottom: 0;
-        @media (min-width: 1025px) {
+        @media (min-width: 1023px) {
             padding: 0 10px 0;
         }
     }
@@ -72,7 +75,7 @@
                 @include size(100%, 2px);
                 background: #828282;
                 z-index: 2;
-                @media (min-width: 1025px) {
+                @media (min-width: 1023px) {
                     bottom: -42px;
                 }
             }
@@ -86,7 +89,7 @@
         letter-spacing: 0.05em;
         text-transform: uppercase;
         color: #423C3A;
-        @media (min-width: 1025px) {
+        @media (min-width: 1023px) {
             font-size: 29px;
             line-height: 36px;
         }
@@ -101,7 +104,7 @@
         justify-content: space-around;
         position: relative;
         margin: 0 0 30px 0;
-        @media (min-width: 1025px) {
+        @media (min-width: 1023px) {
             padding: 0 0 40px 0;
             margin: 40px 0 30px 0;
             justify-content: flex-start;
@@ -119,7 +122,7 @@
             @include size(120%, 1px);
             background: #BDBDBD;
             z-index: 1;
-            @media (min-width: 1025px) {
+            @media (min-width: 1023px) {
                 @include size(100%, 1px);
                 left: 0;
             }
@@ -133,7 +136,7 @@
     justify-items: center;
     color: #FFFFFF;
     margin: 0 0 30px;
-    @media (min-width: 1025px) {
+    @media (min-width: 1023px) {
         grid-template-columns: 30% 40% 30%;
         overflow: hidden;
         margin: 0 0 90px;
@@ -149,7 +152,7 @@
         line-height: 29px;
         color: #FFF3A6;
         margin: 15px 0 10px 0;
-        @media (min-width: 1025px) {
+        @media (min-width: 1023px) {
             grid-column: 1/2;
             grid-row: 1/2;
             font-size: 30px;
@@ -157,6 +160,11 @@
             width: 100%;
             padding: 0 0 0 40px;
             margin: 50px 0 15px;
+        }
+        @media (min-width: 1024px) and (height: 768px) {
+            margin: 25px 15px 15px;
+            padding: 0;
+            width: unset;
         }
         // @media (min-width: 1200px) {
         //     font-size: 33px;
@@ -175,7 +183,7 @@
         text-transform: uppercase;
         margin: 0 35px 20px 27px;
         text-align: center;
-        @media (min-width: 1025px) {
+        @media (min-width: 1023px) {
             grid-column: 1/2;
             font-size: 20px;
             text-align: left;
@@ -183,14 +191,11 @@
             padding: 0 40px 0;
             margin: 0 0 40px;
         }
-        // @media (min-width: 1200px) {
-        //     font-size: 22px;
-        //     line-height: 26px;
-        // }
-        // @media (min-width: 1366px) {
-        //     font-size: 24px;
-        //     line-height: 29px;
-        // }
+        @media (min-width: 1024px) and (height: 768px) {
+            margin: 0 15px 20px;
+            padding: 0;
+            width: unset;
+        }
     }
     &__text {
         //grid-row: 5/6;
@@ -198,32 +203,41 @@
         font-size: 16px;
         line-height: 20px;
         margin: 0 25px 30px;
-        @media (min-width: 1025px) {
+        @media (min-width: 1023px) {
             grid-column: 1/2;
             grid-row: 3/4;
             margin: 0 40px 50px;
             font-size: 14px;
         }
+        @media (min-width: 1024px) and (height: 768px) {
+            margin: 0 15px 20px;
+            font-size: 11px;
+            line-height: 12px;
+            max-height: 132px;
+            overflow: hidden;
+        }
     }
     &__links {
-        margin: 0 20px 10px 40px;
+        padding: 0 20px 10px 40px;
         font-size: 16px;
+        @media (min-width: 1023px) {
+            grid-column: 1/2;
+            grid-row: 4/5;
+            padding: 0 0 50px 40px;
+            width: 100%;
+        }
+        @media (min-width: 1024px) and (height: 768px) {
+            padding: 0 15px 20px;
+        }
         .arrow-btn {
             margin-bottom: 30px;
             .icon {
                 top: 50%;
                 left: 55%;
-                -webkit-transform: translateY(-50%) rotate(-180deg);
                 transform: translateY(-50%) translateX(-50%) rotate(-180deg);
                 height: 20px;
             }
-        }
-        @media (min-width: 1025px) {
-            grid-column: 1/2;
-            grid-row: 4/5;
-            width: 100%;
-            margin: 0 0 50px 65px;
-            .arrow-btn {
+            @media (min-width: 1025px) {
                 height: unset;
                 margin: 0;
                 font-size: 18px;
@@ -242,6 +256,18 @@
                     font-size: 16px;
                 }
             }
+            @media (min-width: 1024px) and (height: 768px) {
+                &:first-child {
+                    margin-bottom: 10px;
+                }
+                &:last-child {
+                    margin-bottom: 0;
+                }
+                &__text {
+                    padding-left: 16px;
+                    font-size: 12px;
+                }
+            }
         }
     }
     &__img {
@@ -250,7 +276,7 @@
         overflow: hidden;
         position: relative;
         margin: 0 0 30px 0;
-        @media (min-width: 1025px) {
+        @media (min-width: 1023px) {
             grid-column: 2/3;
             grid-row: 1/5;
             height: unset;
@@ -269,11 +295,15 @@
             min-width: 100%;
             max-width: 120%;
             transition: all 1s cubic-bezier(.04, .5, .68, 1.04);
-            // @media (min-width: 1025px) {
-            //     @include pos($b: 50%, $l: 50%);
-            //     transform: translateX(-50%) translateY(50%);
-            //     @include size(125%, auto);
-            // }
+            @media (min-width: 1024px) and (height: 768px) {
+                width: auto;
+                height: 100%;
+                min-height: unset;
+                min-width: unset;
+                max-width: unset;
+                @include pos($t: 50%, $l: 50%);
+                transform: translateX(-50%) translateY(-50%);
+            }
         }
         .icon {
             margin: 7.5px 0 0 7.5px;
@@ -295,7 +325,7 @@
     &__icons {
         grid-row: 4/5;
         margin: 0 40px;
-        @media (min-width: 1025px) {
+        @media (min-width: 1023px) {
             grid-column: 3/4;
             grid-row: 1/5;
             align-items: center;
@@ -305,12 +335,16 @@
             align-items: flex-start;
             margin: 25px 40px;
         }
+        @media (min-width: 1024px) and (height: 768px) {
+            margin: 25px 10px;
+            width: calc(100% - 20px);
+        }
     }
     &__icon {
         display: flex;
         margin: 0 0 40px 0;
         letter-spacing: 0.05em;
-        @media (min-width: 1025px) {
+        @media (min-width: 1023px) {
             margin: 0;
             align-items: center;
             &:last-child {
@@ -326,6 +360,7 @@
             @media (min-width: 1025px) {
                 @include size(65px);
             }
+            @media (min-width: 1024px) and (height: 768px) {}
         }
         .icon-text {
             font-size: 16px;
@@ -337,6 +372,10 @@
                 text-transform: uppercase;
                 margin: 0 0 10px;
                 //letter-spacing: 0;
+            }
+            @media (min-width: 1024px) and (height: 768px) {
+                font-size: 14px;
+                line-height: 13px;
             }
         }
     }
