--- a/app/scss/modules/_section-about.scss
+++ b/app/scss/modules/_section-about.scss
@@ -21,9 +21,9 @@
         grid-column: 2 / 12;
         align-items: center;
         width: 100%;
-        @media (max-width: 576px) {
-            grid-column: 1 / 13;
-        }
+        // @media (max-width: 576px) {
+        //     grid-column: 1 / 13;
+        // }
         &__btn {
             grid-row: 3 / 4;
             align-self: center;
@@ -33,10 +33,10 @@
                 fill: #514947;
             }
             @media (max-width: 576px) {
-                display: none !important;
+                //display: none !important;
             }
             @media (max-width: 812px) and (orientation: landscape) {
-                display: none !important;
+                //display: none !important;
             }
         }
         &__prev {
@@ -62,6 +62,9 @@
         @media (max-width: 576px) {
             height: unset;
         }
+        @media (max-width: 1024px) and (orientation: landscape) {
+            height: 340px;
+        }
         &__icon {
             display: flex;
             align-items: center;
@@ -70,6 +73,12 @@
             background: $page-bg;
             margin-bottom: 45px;
             border-radius: 50%;
+            @media (max-width: 1024px) and (orientation: landscape) {
+                @include size(120px);
+                svg {
+                    @include size(75px);
+                }
+            }
         }
         &__head {
             font-size: 1.8em;
@@ -77,11 +86,11 @@
             text-transform: uppercase;
             text-align: center;
             flex-grow: 2;
-            @media (max-width: 576px) {
-                font-size: 24px;
+            @media (max-width: 912px) {
+                font-size: 22px;
                 line-height: 29px
             }
-            @media (max-width: 1366px) {
+            @media (min-width: 1366px) {
                 font-size: 24px;
                 line-height: 29px
             }
@@ -89,20 +98,28 @@
                 margin: 0;
                 font-size: 1.5em;
             }
+            @media (max-width: 1024px) and (orientation: landscape) {
+                font-size: 16px;
+                line-height: 24px
+            }
         }
         &__text {
             font-size: 1.25rem;
             flex-grow: 2;
-            @media (max-width: 576px) {
-                font-size: 19px;
+            @media (max-width: 912px) {
+                font-size: 17px;
                 line-height: 24px
             }
-            @media (max-width: 1366px) {
+            @media (min-width: 1366px) {
                 font-size: 19px;
                 line-height: 24px
             }
             @media (max-width: 812px) and (orientation: landscape) {
                 font-size: 1.1em;
+            }
+            @media (max-width: 1024px) and (orientation: landscape) {
+                font-size: 14px;
+                line-height: 16px
             }
         }
     }
@@ -153,6 +170,10 @@
         right: -90px;
     }
     .slick-arrow {
+        @media (max-width: 576px) {
+            width: 15px;
+            height: 100%;
+        }
         @include size(65px, 105px);
         font-size: 50px;
         //background: url(/images/icons/arrow.svg) 60% no-repeat;
@@ -163,7 +184,7 @@
             font-size: 50px;
         }
         @media (max-width: 576px) {
-            display: none !important;
+            display: block;
         }
         fill: #423C3A;
         cursor: pointer;
