--- a/app/scss/modules/_section-contact.scss
+++ b/app/scss/modules/_section-contact.scss
@@ -2,7 +2,7 @@
     background: url(../images/bg-contacts.jpg) 50% no-repeat;
     background-repeat: no-repeat;
     background-size: cover;
-    background-attachment: fixed;
+    //background-attachment: fixed;
     background-position: center;
     color: $tw;
     .wpcf7-response-output {
@@ -14,10 +14,14 @@
         font-size: 19px;
         color: #fff3a6;
         text-decoration: underline;
-        @media (min-width: 1025px) {
+        @media (min-width: 1023px) {
             grid-row: 3/4;
             grid-column: 4/10;
             margin: 30px 0 0;
+        }
+        @media (min-width: 1024px) and (height: 768px) {
+            font-size: 14px;
+            line-height: 16px;
         }
     }
 }
@@ -36,13 +40,13 @@
         width: 100%;
         display: grid;
         grid-template-columns: repeat(12, 1fr);
-        @media (min-width: 1025px) {
+        @media (min-width: 1023px) {
             gap: 40px;
         }
         //overflow: hidden;
         label {
             grid-column: span 12;
-            @media (min-width: 1025px) {
+            @media (min-width: 1023px) {
                 grid-column: span 4;
             }
         }
@@ -59,9 +63,13 @@
     margin-bottom: 40px;
     font-size: 24px;
     line-height: 29px;
-    @media (min-width: 1025px) {
+    @media (min-width: 1023px) {
         font-size: 36px;
         line-height: 44px;
+    }
+    @media (min-width: 1024px) and (height: 768px) {
+        font-size: 30px;
+        line-height: 40px;
     }
 }
 
@@ -80,7 +88,7 @@
         // color: #423C3A;
         // border-bottom: 2px solid #423C3A;
     }
-    @media (min-width: 1025px) {
+    @media (min-width: 1023px) {
         font-size: 18px;
         line-height: 24px;
         margin-bottom: 0;
@@ -96,6 +104,10 @@
         font-size: 24px;
         //line-height: 29px;
         margin-bottom: 0;
+    }
+    @media (min-width: 1024px) and (height: 768px) {
+        font-size: 17px;
+        line-height: 20px;
     }
 }
 
@@ -123,10 +135,13 @@
 .contact-form__checkbox {
     grid-column: 3/12;
     margin-bottom: 40px;
-    @media (min-width: 1025px) {
+    @media (min-width: 1023px) {
         grid-column: 2 / 8;
         margin-top: 100px;
         margin-bottom: 0;
+    }
+    @media (min-width: 1024px) and (height: 768px) {
+        margin-top: 50px;
     }
     // grid-row: 3 / 4;
     position: relative;
@@ -152,10 +167,14 @@
         // &:hover {
         //     color: #828282;
         // }
-        @media (min-width: 1025px) {
+        @media (min-width: 1023px) {
             font-size: 19px;
             line-height: 23px;
             padding: 0;
+        }
+        @media (min-width: 1024px) and (height: 768px) {
+            font-size: 14px;
+            line-height: 16px;
         }
     }
     .wpcf7-list-item {
@@ -168,9 +187,13 @@
         display: inline;
         font-size: 12px;
         line-height: 15px;
-        @media (min-width: 1025px) {
+        @media (min-width: 1023px) {
             font-size: 19px;
             line-height: 23px;
+        }
+        @media (min-width: 1024px) and (height: 768px) {
+            font-size: 14px;
+            line-height: 16px;
         }
     }
 }
@@ -192,9 +215,13 @@
 .wpcf7-submit {
     grid-column: 3/10;
     text-transform: uppercase;
-    @media (min-width: 1025px) {
+    @media (min-width: 1023px) {
         grid-column: 9/ 12;
         text-transform: initial;
+    }
+    @media (min-width: 1024px) and (height: 768px) {
+        font-size: 14px;
+        line-height: 16px;
     }
     line-height: 50px;
     height: 50px;
